--- a/package.json
+++ b/package.json
@@ -1,35 +1,70 @@
 {
 
   "name": "ffis-moderna",
+
   "private": true,
+
   "version": "1.0.0",
+
   "type": "module",
+
   "scripts": {
+
     "dev": "vite",
+
     "build": "vite build",
+
     "lint": "eslint .",
+
     "preview": "vite preview",
+
     "predeploy": "npm run build",
+
     "deploy:gh-pages": "gh-pages -d dist",
+
     "deploy": "gh-pages -d dist"
+
   },
+
   "dependencies": {
+
+    "@supabase/supabase-js": "^2.50.2",
+
     "lucide-react": "^0.344.0",
+
     "react": "^18.2.0",
+
     "react-dom": "^18.2.0"
+
   },
+
   "devDependencies": {
+
     "@types/react": "^18.2.55",
+
     "@types/react-dom": "^18.2.19",
+
     "@vitejs/plugin-react": "^4.2.1",
+
     "autoprefixer": "^10.4.17",
+
     "eslint": "^8.56.0",
+
     "eslint-plugin-react-hooks": "^4.6.0",
+
     "eslint-plugin-react-refresh": "^0.4.5",
+
     "gh-pages": "^6.1.1",
+
     "postcss": "^8.4.35",
+
     "tailwindcss": "^3.4.1",
+
     "typescript": "^5.3.3",
+
     "vite": "^5.1.3"
+
   }
+
 }
+
