--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
+      - name: Debug env
+        run: |
+          echo "VITE_SUPABASE_URL is: $VITE_SUPABASE_URL"
+          echo "VITE_SUPABASE_KEY is: $VITE_SUPABASE_KEY"
+        env:
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+          VITE_SUPABASE_KEY: ${{ secrets.VITE_SUPABASE_KEY }}
+    
       - name: Build
         run: npm run build
         env:
