--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
 
     "@supabase/supabase-js": "^2.50.2",
 
+    "@types/react-router-dom": "^5.3.3",
+
     "lucide-react": "^0.344.0",
 
     "react": "^18.2.0",
 
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+
+    "react-router-dom": "^7.7.1"
 
   },
 
